--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,17 +3,21 @@ name: Deploy Website
 on: [push]
 
 jobs:
-  build:
+  prepare:
+    name: Prepare
     runs-on: ubuntu-latest
-    name: Deploying to surge
     steps:
-      - uses: actions/checkout@v2
+      - uses: DerYeger/yarn-setup-action@master
+        with:
+          node-version: 16
       - name: Install Node.js
         uses: actions/setup-node@v2-beta
         with:
-          node-version: 12
-      - name: Prepare for Yarn Installation
-        run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+          node-version: 16
+      - uses: DerYeger/yarn-setup-action@master
+        with:
+          node-version: 16
+      - run: yarn build
       - name: install yarn
         run: sudo apt update && sudo apt install yarn
       - name: Build React App
@@ -22,3 +26,4 @@ jobs:
         run: npm install -g surge
       - name: Run surge
         run: surge ./build bootcamp_react_talha.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+	
