--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,21 @@
-name: Deploy Website
-
-on: [push]
-
+name: Deploy Surge Website   
+on: [push]   
 jobs:
-  prepare:
-    name: Prepare
-    runs-on: ubuntu-latest
-    steps:
-      - uses: DerYeger/yarn-setup-action@master
-        with:
-          node-version: 16
-      - name: Install Node.js
-        uses: actions/setup-node@v2-beta
-        with:
-          node-version: 16
-      - uses: DerYeger/yarn-setup-action@master
-        with:
-          node-version: 16
-      - run: yarn build
-      - name: install yarn
-        run: sudo apt update && sudo apt install yarn
-      - name: Build React App
-        run: yarn build
-      - name: Install Surge
-        run: npm install -g surge
-      - name: Run surge
-        run: surge ./build bootcamp_react_talha.surge.sh --token ${{ secrets.SURGE_TOKEN }}
-	
+       build:                           
+           runs-on: ubuntu-latest 
+           name: Deploying to surge 
+           steps:    
+           - uses: actions/checkout@v2 
+           - name: Install Node.js
+             uses: actions/setup-node@v2-beta
+             with: 
+               node-version: 12 
+           - uses: borales/actions-yarn@v2.0.0 # `yarn install`
+             with:
+               cmd: install 
+           - name: Build React App                              
+             run: yarn build 
+           - name: Install Surge
+             run: npm install --global surge  
+           - name: Run surge
+             run: surge ./build bootcamp_react_talha.surge.sh --token ${{ secrets.SURGE_TOKEN }}
