--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
              uses: actions/setup-node@v2-beta
              with: 
                node-version: 12 
+           - name: Prepare for Yarn Installation
+             run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
            - uses: borales/actions-yarn@v2.0.0 # `yarn install`
              with:
                cmd: install 
